Update to do search asynchronously

--- a/index.html
+++ b/index.html
@@ -18,10 +18,19 @@
     .item a {
         padding-left: 5px;
     }
+    .loading {
+        padding-left: 20px;
+    }
 </style>
 <body>
     <div class="header">
         <h1>Adapt Learning GitHub Repo Search</h1>
+    </div>
+
+    <div class="container">
+        <div class="loading">
+            Searching GitHub for Adapt repositories, please wait...
+        </div>
     </div>
 
     <!-- Handlebars template data (start) -->
