Add results count

--- a/index.html
+++ b/index.html
@@ -21,15 +21,23 @@
     .loading {
         padding-left: 20px;
     }
+    .results .header {
+        font-weight: bold;
+        padding-bottom: 10px;
+    }
 </style>
 <body>
     <div class="header">
         <h1>Adapt Learning GitHub Repo Search</h1>
     </div>
 
-    <div class="container">
-        <div class="loading">
-            Searching GitHub for Adapt repositories, please wait...
+    <div class="results">
+        <div class="header">
+        </div>
+        <div class="container">
+            <div class="loading">
+                Searching GitHub for Adapt repositories, please wait...
+            </div>
         </div>
     </div>
 
